--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -1,8 +1,11 @@
 rules = [
-  RemoveUnused
-  ExplicitResultTypes
+  OrganizeImports
 ]
 
 ExplicitResultTypes {
-  unsafeShortenNames = true
+    unsafeShortenNames = true
+}
+OrganizeImports {
+    groups = ["re:javax?\\.", "scala.","org.", "com.", "io.", "cats.", "fs2.", "scodec." , "biton.", "*"]
+    groupedImports = Merge
 }
