--- a/.scalafix.conf
+++ b/.scalafix.conf
@@ -6,6 +6,6 @@ ExplicitResultTypes {
     unsafeShortenNames = true
 }
 OrganizeImports {
-    groups = ["re:javax?\\.", "scala.","org.", "com.", "io.", "cats.", "fs2.", "scodec." , "biton.", "*"]
+    groups = ["re:javax?\\.", "scala.","org.", "com.", "io.", "cats.", "fs2.", "scodec." ,"org.scalacheck.", "biton.", "*"]
     groupedImports = Merge
 }
